--- a/package.json
+++ b/package.json
@@ -28,6 +28,11 @@
                 "filter": "**/**"
             },
             {
+                "from": "node_modules/tinify",
+                "to": "./node_modules/tinify",
+                "filter": "**/**"
+            },
+            {
                 "from": "bin",
                 "to": "./",
                 "filter": "**/*"
@@ -60,5 +65,7 @@
         "electron-builder": "^22.4.1",
         "typescript": "^3.8.3"
     },
-    "dependencies": {}
+    "dependencies": {
+        "tinify": "^1.6.0-beta.2"
+    }
 }
